--- a/CooktailApp/css/style.css
+++ b/CooktailApp/css/style.css
@@ -5,6 +5,8 @@
 /* Box Model Hack */
 *{
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
   }
   
   /******************************************
@@ -16,7 +18,12 @@
     max-height: 250px;
     max-width: 200px;
   }
-  
+
+  .content {
+    display: grid;
+    grid-template-columns: 33.33% 33.33% 33.33%;
+    position: relative;
+  }
   
   /******************************************
   /* ADDITIONAL STYLES
@@ -26,30 +33,56 @@
     padding: 5px 30px;
     color: white;
     min-height: 100vh;
-  
   }
+
   input {
     background: grey;
     border-radius: 20px;
   }
-  button {
+  .button {
     background: linear-gradient(rgba(13, 47, 65, 0.5),rgba(35, 16, 16, 0.4));
   }
-  input, button {
+  input, .button {
     padding: 0 15px;
     height: 2rem;
     color: white;
     border-radius: 20px;
   }
+
   .content {
-    display: grid;
-    grid-template-columns: 33.33% 33.33% 33.33%;
-    
+    margin-top: 5%;
+    margin-left: 5%;
   }
+  h1 {
+    margin-top: 5%;
+  }
+
+  h2, h3 {
+    padding: 0 0 15px 0;
+  } 
+
+  /* buttons */
+  .btn {
+    position: absolute;
+    color: white;
+    font-size: 3.5rem;
+    background: none;
+    border: none;
+  }
+  .btn-next {
+    top: 30px;
+    right: 70px;
+  }
+  button.btn-prev {
+    top: 30px;
+    left: -70px;
+  }
+
+
+  /* col-3 */
   h3 {
     color: rgb(70, 177, 152);
   }
-  
   ul {
     text-align: left;
     list-style: none;
