--- a/CooktailApp/css/style.css
+++ b/CooktailApp/css/style.css
@@ -48,7 +48,6 @@
     color: white;
     border-radius: 20px;
   }
-
   .content {
     margin-top: 5%;
     margin-left: 5%;
@@ -60,6 +59,7 @@
   h2, h3 {
     padding: 0 0 15px 0;
   } 
+
 
   /* buttons */
   .btn {
@@ -87,5 +87,10 @@
     text-align: left;
     list-style: none;
     padding: 0;
+  }
+  
+
+  .hidden{
+    display: none;
   }
   
