--- a/PokemonApp/css/style.css
+++ b/PokemonApp/css/style.css
@@ -112,6 +112,31 @@ img {
 
 .main-buttons {
     width: 70%;
-    margin: 0 auto;
+    margin: 20px auto;
     border: 2px solid blue;
+    display: flex;
+}
+.first-col {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    padding: 5px;
+}
+.circle-button {
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    margin: 0 auto;
+}
+.rectangle-button {
+    height: 20px;
+}
+.second-col {
+    display: flex;
+    flex-direction: column;
+}
+.arrow {
+    height: 20px;
+    width: 20px;
+    margin: 0 auto;
 }
