--- a/PokemonApp/css/style.css
+++ b/PokemonApp/css/style.css
@@ -7,7 +7,7 @@
 body {
     font-size: 62.5%;
     display: flex;
-    padding: 20px;
+    padding: 5px 15%;
 }
 .first-page, 
 .second-page {
@@ -15,7 +15,17 @@ body {
     background-color: red;
     display: flex;
     flex-direction: column;
+    box-shadow: 0px 10px 5px rgb(167, 14, 14);
 }
+.first-page {
+    background-color: rgb(182, 14, 14);
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 15px;
+}
+.second-page {
+    border-bottom-right-radius: 15px;
+}
+
 .middle {
     width: 4%;
     background-color: darkred;
@@ -24,6 +34,9 @@ body {
 /* first-page section */
 .three-circles-container {
     display: flex;
+    background-color: red;
+    border-top-left-radius: 5px;
+
 }
 .three-circles-container .two-thirds {
     display: flex;
@@ -53,6 +66,7 @@ body {
 }
 
 .big-circle-container {
+    background-color: red;
     width: 70%;
     position: relative;
     height: 50px;
@@ -68,6 +82,7 @@ body {
     border-radius: 50%;
     position: absolute;
     top: -10px;
+    left: 10px;
     border: 5px solid white;
 }
 
@@ -80,7 +95,7 @@ body {
 .screen-container {
     border-radius: 0.5em;
     background-color: rgb(201, 214, 216);
-    width: 70%;
+    width: 80%;
     margin: 0 auto;
     padding: 15px 15px 0 15px;
 }
@@ -139,4 +154,5 @@ img {
     height: 20px;
     width: 20px;
     margin: 0 auto;
+    background: rgb(78, 73, 73);
 }
