--- a/PokemonApp/css/style.css
+++ b/PokemonApp/css/style.css
@@ -101,18 +101,18 @@ body {
 }
 
 .screen-container {
-    border-radius: 0.5em;
-    background-color: rgb(201, 214, 216);
+    border-radius: 2.5em;
+    background-color: rgb(73 103 107 / 40%);
     width: 80%;
     margin: 0 auto;
     padding: 15px 15px 0 15px;
+    color: white;
 }
 .screen {
     width: 100%;
     min-height: 200px;
     margin: 0 auto;
-    background-color: rgb(185, 215, 226);
-    display: flex;
+    background-color: rgb(47 50 51);    display: flex;
     flex-direction: column;
     border-style: groove;
     border-width: 7px;
@@ -120,14 +120,14 @@ body {
 }
 input {
     width: 100%;
-    background: skyblue;
+    background-color: rgb(47 50 51); 
     border: 1px solid rgb(20, 170, 196);
+    color: white;
 }
 .image-description {
     display: flex;
     min-height: 170px;
-    color: rgb(22, 25, 187);
-    font-size: 1.2rem;
+    color: rgb(202 229 229 / 46%);    font-size: 1.2em;
 
 }
 
